force-app/main/default/objects/CaseSolution__c/CaseSolution__c.object-meta.xml
<CustomObject>
    <label>Case Solution</label>
    <nameField>
        <label>Case Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>