force-app/main/default/objects/CaseSolution__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Balance</fullName>
            </value>
            <value>
                <fullName>Apple Devices</fullName>
            </value>
            <value>
                <fullName>Belege</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Callbacks and appointments</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Card Reader</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Complimentary Services and Materials</fullName>
            </value>
            <value>
                <fullName>Data Maintenance</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Dunning/Debt Collection</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>General Questions</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Guest WiFi</fullName>
            </value>
            <value>
                <fullName>Human Error - OB</fullName>
            </value>
            <value>
                <fullName>Internal Data Maintenance</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Masterdata</fullName>
            </value>
            <value>
                <fullName>Menu Card</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>Pricing and Conditions</fullName>
            </value>
            <value>
                <fullName>Product Delisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>