force-app/main/default/objects/CaseSolution__c/fields/Case_Solution_Po1__c.field-meta.xml
<CustomField>
    <fullName>Case_Solution_Po1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Solution Po1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>