force-app/main/default/objects/CaseSolution__c/fields/CaseReason__c.field-meta.xml
<CustomField>
    <fullName>CaseReason__c</fullName>
    <description>Stakeholder: CS</description>
    <inlineHelpText>Does this problem come from a lack of knowledge? Is it a setup question? Note: Please only use SOS if instructed</inlineHelpText>
    <label>Case Reason (old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Hardware</fullName>
            </value>
            <value>
                <fullName>Adress</fullName>
            </value>
            <value>
                <fullName>Advanced rights management</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Apple ID</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Ausfall</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Bill/Docket</fullName>
            </value>
            <value>
                <fullName>Billing / Sales</fullName>
            </value>
            <value>
                <fullName>Bill Template</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Cancellation because of bugs</fullName>
            </value>
            <value>
                <fullName>Cancellation reasons</fullName>
            </value>
            <value>
                <fullName>Capacity issues</fullName>
            </value>
            <value>
                <fullName>Cash out</fullName>
            </value>
            <value>
                <fullName>Change of management</fullName>
            </value>
            <value>
                <fullName>Change of owner</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Could not be reached</fullName>
            </value>
            <value>
                <fullName>Course control</fullName>
            </value>
            <value>
                <fullName>Data maintenance</fullName>
            </value>
            <value>
                <fullName>DATEV</fullName>
            </value>
            <value>
                <fullName>Debt collection</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Docket Printing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>