force-app/main/default/objects/CaseSolution__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category (old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Level</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Dev</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>fiskaltrust</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>my.orderbird</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>orderbird App</fullName>
            </value>
            <value>
                <fullName>Pay</fullName>
            </value>
            <value>
                <fullName>Superscale</fullName>
            </value>
            <value>
                <fullName>tools</fullName>
            </value>
            <value>
                <fullName>unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>