force-app/main/default/objects/CaseSolution__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator Case Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>