force-app/main/default/objects/CaseSolution__c/fields/Merge_Parent__c.field-meta.xml
<CustomField>
    <fullName>Merge_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Parent</label>
    <referenceTo>CaseSolution__c</referenceTo>
    <relationshipLabel>Case Solutions</relationshipLabel>
    <relationshipName>Case_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>