force-app/main/default/objects/CaseSolution__c/fields/NameDE__c.field-meta.xml
<CustomField>
    <fullName>NameDE__c</fullName>
    <label>Name (German)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>