force-app/main/default/objects/CaseSolution__c/fields/NameFR__c.field-meta.xml
<CustomField>
    <fullName>NameFR__c</fullName>
    <label>Name (French)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>