force-app/main/default/objects/CaseSolution__c/fields/ProductService__c.field-meta.xml
<CustomField>
    <fullName>ProductService__c</fullName>
    <label>Product/Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party Products</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Cash Book</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Customer Account</fullName>
            </value>
            <value>
                <fullName>Customer Health</fullName>
            </value>
            <value>
                <fullName>Customer Management Resmio</fullName>
            </value>
            <value>
                <fullName>DATEV</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>fiskaltrust</fullName>
            </value>
            <value>
                <fullName>Gastro Gründer Preis</fullName>
            </value>
            <value>
                <fullName>Get It Done</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
            <value>
                <fullName>KassenSichV</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>MINI by orderbird</fullName>
            </value>
            <value>
                <fullName>my.orderbird</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>orderbird App</fullName>
            </value>
            <value>
                <fullName>orderbird Pay</fullName>
            </value>
            <value>
                <fullName>orderbird WiFi</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Product Integration</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>