force-app/main/default/objects/CaseSolution__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <inlineHelpText>Sub-Category of this case. Depends on Category</inlineHelpText>
    <label>SubCategory (old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(User) Training Issue</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Apple Device</fullName>
            </value>
            <value>
                <fullName>Apple Devices</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Belege</fullName>
            </value>
            <value>
                <fullName>Bill/Docket</fullName>
            </value>
            <value>
                <fullName>Bug Report - Salesforce</fullName>
            </value>
            <value>
                <fullName>Bug Report - Zuora</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cardreader</fullName>
            </value>
            <value>
                <fullName>Cashbox</fullName>
            </value>
            <value>
                <fullName>Cashdrawer</fullName>
            </value>
            <value>
                <fullName>Cash Drawer &amp; Components</fullName>
            </value>
            <value>
                <fullName>Could not be reached</fullName>
            </value>
            <value>
                <fullName>Critique</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Device Integration</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Exports</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>First Steps</fullName>
            </value>
            <value>
                <fullName>Fiscal Trust</fullName>
            </value>
            <value>
                <fullName>Food Notify</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Guest Wifi</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>