force-app/main/default/objects/CaseSolution__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <label>Usage</label>
    <summaryForeignKey>CaseSolutionJunction__c.CaseSolution__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>