force-app/main/default/objects/CaseSolution__c/validationRules/FinanceApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>FinanceApproval</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Approved__c ) 
&amp;&amp;
 $Profile.Name = &quot;Finance&quot;
&amp;&amp;
  NOT(ISPICKVAL(Case_Reason__c, &quot;Finance&quot;))</errorConditionFormula>
    <errorMessage>Finance should only approve Finance Case Solutions</errorMessage>
</ValidationRule>