force-app/main/default/objects/CaseSolution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NameDE__c</columns>
    <columns>NameFR__c</columns>
    <columns>Description__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ProductService__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Usage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>