force-app/main/default/objects/CaseSolution__c/listViews/Case_Solutions_Maintenance_new.listView-meta.xml
<ListView>
    <fullName>Case_Solutions_Maintenance_new</fullName>
    <columns>NameDE__c</columns>
    <columns>NAME</columns>
    <columns>NameFR__c</columns>
    <columns>Description__c</columns>
    <columns>ProductService__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Usage__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Case Solutions Maintenance new</label>
</ListView>