force-app/main/default/objects/CaseSolution__c/listViews/Case_Solutions_mit_Kategorien.listView-meta.xml
<ListView>
    <fullName>Case_Solutions_mit_Kategorien</fullName>
    <columns>NameDE__c</columns>
    <columns>NameFR__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>ProductService__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Case Solutions mit Kategorien</label>
</ListView>