force-app/main/default/objects/CaseSolution__c/listViews/Finance_Case_Solutions.listView-meta.xml
<ListView>
    <fullName>Finance_Case_Solutions</fullName>
    <columns>NAME</columns>
    <columns>NameDE__c</columns>
    <columns>Description__c</columns>
    <columns>ProductService__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductService__c</field>
        <operation>equals</operation>
        <value>Finance</value>
    </filters>
    <label>Finance Case Solutions</label>
</ListView>