force-app/main/default/objects/CaseSolution__c/listViews/Unapproved.listView-meta.xml
<ListView>
    <fullName>Unapproved</fullName>
    <columns>NAME</columns>
    <columns>NameDE__c</columns>
    <columns>NameFR__c</columns>
    <columns>Description__c</columns>
    <columns>Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ProductService__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Usage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Unapproved</label>
</ListView>